Changes to be committed:添加用户认证中间件和JWT黑名单功能 	new file:   .env 	modified:   .gitignore 	new file:   backend/.env 	modified:   backend/cmd/server/main.go 	modified:   backend/docs/docs.go 	modified:   backend/docs/swagger.json 	modified:   backend/docs/swagger.yaml 	modified:   backend/internal/common/response.go 	modified:   backend/internal/handler/image/image.go 	modified:   backend/internal/handler/user/user.go 	new file:   backend/internal/middleware/cors/cors.go 	new file:   backend/internal/middleware/jwt/blacklist.go 	modified:   backend/internal/middleware/jwt/jwt.go 	modified:   backend/internal/middleware/jwt/middleware.go 	modified:   backend/internal/router/router.go 	modified:   backend/internal/router/user.go 	modified:   backend/internal/service/session/session.go 	modified:   backend/internal/service/user/user.go
